style(security): improve the code style (#78)